--- a/formulario.html
+++ b/formulario.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <form action="" class="formulario">
-        <h1 class="formulario_titulo">Contáctenos</h1>
+        <h1 class="formulario_titulo">REGISTRO</h1>
         <input type="text" class="formulario_input">
         <label for="" class="formulario_label">Nombre</label>
         <input type="text" class="formulario_input">
